templates/g5_helium/custom/scss/global.scss
/* ... */
.view-form:not(.emundus-form):not(.com_emundus):not(.applicant-form) main#g-main-mainbody {
  width: 100%;
}

.referents-sollicitation-page .calendarbutton {
  background: var(--neutral-0);
  border-radius: 0 4px 4px 0 !important;
  border: 1px solid #e0e0e5;
  height: 41px;
}

.referents-sollicitation-page .calendarbutton i {
  color: #333333;
}

.layout-formbuilder {
  color: initial;
}

.gantry:not(.applicant-form):not(.files-board).com_emundus.view-campaigns,
.gantry:not(.applicant-form):not(.files-board).com_emundus.layout-addnextcampaign,
.gantry:not(.applicant-form):not(.files-board).com_emundus.view-emails,
.gantry:not(.applicant-form):not(.files-board).com_emundus.view-form{
  #g-container-main {
    padding-left: 76px;
  }
  h1,h2,h3,h4,h5,h6 {
    color: var(--em-coordinator-title-color);
    font-family: var(--em-profile-font-title), Inter, sans-serif;
  }
}

.com_emundus:not(.view-programme):not(.view-form):not(.view-users.layout-edit):not(.view-checklist):not(.files-board),
.com_emundus.view-form .com_emundus_vue {

  *:not(.material-icons):not(.material-icons-outlined):not(.glyphicon):not(.fas):not(i.icon):not(i.mce-ico):not(.fa):not([class^=icon-]) {
    font-family: var(--em-profile-font), Inter, sans-serif;
  }
}

.files-board.com_emundus, .view-list.com_fabrik {
  *:not(.material-icons):not(.material-icons-outlined):not(.glyphicon):not(.fas):not(i.icon):not(i.mce-ico):not(.fa):not([class^=icon-]) {
    font-family: var(--em-profile-font), Inter, sans-serif;
  }
}

.com_emundus.view-users.layout-edit .em-container-profile-view-pict h1 {
  font-family: var(--em-profile-font-title), Inter, sans-serif;
}

.indicateurs-page *:not(.material-icons):not(.material-icons-outlined):not(.glyphicon):not(.fas):not(i.icon):not(i.mce-ico):not(.fa):not([class^=icon-]) {
  font-family: var(--em-profile-font), Inter, sans-serif;
}

.com_emundus.view-users .em-container-profile-view-form .fabrikGroup {
  legend {
    color: var(--neutral-800);
    font-family: var(--em-profile-font-title), Inter, sans-serif;
  }

  input {
    color: var(--neutral-600);
  }
}

.com_emundus .em-w-custom form.fabrikForm input[placeholder] {
  color: var(--neutral-500);
}


.files-board #users-table .btn.btn-danger.pull-right.em-del-access {
  border-radius: var(--em-coordinator-br) !important;
}

.files-board form.em-form-message .toggle-editor .btn-group a.btn, .modal-body form .em_email_block input.btn.btn-success[name="expert"] {
  background: var(--dark-grey) !important;
  background-color: var(--dark-grey) !important;
  border: 1px solid var(--dark-grey) !important;
  border-radius: var(--em-coordinator-br) !important;
  color: var(--neutral-0) !important;
  font-family: var(--em-profile-font), Inter, sans-serif;

  &:active, &:focus, &:hover {
    background: var(--grey) !important;
    background-color: var(--grey) !important;
    border: 1px solid var(--grey) !important;
    border-radius: var(--em-coordinator-br) !important;
    color: var(--neutral-0) !important;
  }
}

.files-board .dropdown-menu > li > a:not(.logout-button-user):focus,
.files-board .dropdown-submenu:hover > a:not(.logout-button-user),
.files-board .dropdown-submenu:focus > a:not(.logout-button-user) {
  background: var(--grey) !important;
}

.import-csv-page .fabrikActions.form-actions button.importation {
  padding: 5px 30px;
  border: 1px solid var(--main-500);
  background: var(--main-500);
  border-radius: var(--em-coordinator-br) !important;

  &:hover, &:active, &:focus {
    border: 1px solid var(--main-500);
    background: transparent;
    color: var(--main-500);
  }
}

.form.em-decision-form .btn.btn-success {
  padding: var(--em-coordinator-vertical) var(--em-coordinator-horizontal);
  border: 1px solid var(--em-profile-color);
  background: var(--em-profile-color);
  border-radius: var(--em-coordinator-br) !important;

  &:hover, &:active, &:focus {
    border: 1px solid var(--em-profile-color) !important;
    background: var(--neutral-0);
    color: var(--em-profile-color);
  }
}

/* INDICATORS PAGE */

.view-list .fabrikForm {

  /* FILTERS */
  & > div {
    padding: 0;
    margin-top: 16px;

    .fabrikFilterContainer {
      padding: 0 !important;

      .fabrik___heading {
        padding: 0;
      }

      a {
        color: var(--em-profile-color);
      }

       select.fabrik_filter {
        background-position-x: 96%;
      }
    }

    .fabrikButtonsContainer {
      padding: 0;

      .row-cols-auto {
        display: flex;
        justify-content: end;
        gap: 8px;
        margin-bottom: 12px;

        li a.btn {
          background: #FFFFFF;
          border: 1px solid #EDEDED;
          border-radius: 8px;
          display: flex;
          flex-direction: row;
          align-items: center;
          padding: 10px 16px;
          color: black;

          &:hover {
            text-decoration: none;
          }
        }

          ul.dropdown-menu {
            padding: 8px;

            li a {
            color: var(--neutral-900);
            border-radius: 8px;
            display: flex;
            justify-content: flex-start;
            align-items: center;

            &:hover {
              background: #EBECF0 !important;
              border-radius: 4px !important;
              text-decoration: none;
            }
          }
        }
      }
    }
  }

  /* DATAS */
  .fabrikDataContainer tbody {
    border: 1px solid #e0e0e5;
  }

  /* NAV*/

  .fabrikNav {
    .list-footer {
        padding-left: 0;
        margin-left: 0;
        margin-top: 12px;

      .col-sm-2 {
        width: 8%;

        p {
          text-align: left;
        }
      }
    }
  }
}




/* SIDEBAR FILTRES */

.view-form.fabrik-boards .form-horizontal .control-group .btn-group label.btn-default {
  background: var(--em-primary-color);
}

.g-back-office-emundus-tableau .panel-info > .panel-heading {
  background: var(--light-grey-2);
}
/* ... */

